templates/pooled_license/HA-3nic-Across-AZ/license-cft-HA-3nic-Across-AZ.template
AWSTemplateFormatVersion: 2010-09-09

Description: >-
  "This template creates a HA pair across Availability Zones with two instance of Netscaler: 3 ENIs associated to 3 VPC subnets (Management, Client, Server) on primary and 3 ENIs associated to 3 VPC subnets (Management, Client, Server) on secondary. Also allocates user defined license"

Parameters:
  pVpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC ID of your existing Virtual Private Cloud (VPC)
  pSSHCidrIp:
    Type: String
    MinLength: 9
    MaxLength: 18
    Description: "The IP address range that can SSH to the EC2 instance (port: 22)."
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
  pHTTPCidrIp:
    Default: 0.0.0.0/0
    Type: String
    MinLength: 9
    MaxLength: 18
    Description: "The IP address range that can HTTP to the EC2 instance (port: 80)."
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
  pHTTPSCidrIp:
    Default: 0.0.0.0/0
    Type: String
    MinLength: 9
    MaxLength: 18
    Description: "The IP address range that can HTTPS to the EC2 instance (port: 443)."
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
  pKeyName:
    ConstraintDescription: "Can contain only alphanumeric characters, spaces, dashes and underscores."
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
    Default: example testKey
    MinLength: 1
    AllowedPattern: "[-_ a-zA-Z0-9]*"
    MaxLength: 64
    Type: AWS::EC2::KeyPair::KeyName
  pPriManagementIP:
    Default: ""
    Type: String
    Description: >-
      Private IP assigned to the Primary Management ENI (last octet has to be
      between 5 and 254). Leave empty for automatic assignment.
  pPriManagementSubnet:
    Type: AWS::EC2::Subnet::Id
    Description: >-
      SubnetId of an existing subnet in your Virtual Private Cloud (VPC)
      dedicated for Primary Management IP.
      NOTE - The Management Subnet CIDR should be different from that of VPC.
  pPriClientIP:
    Default: ""
    Type: String
    Description: >-
      Private IP assigned to the Primary Client ENI (last octet has to be between 5 and
      254). Leave empty for automatic assignment.
  pPriClientSubnet:
    Type: AWS::EC2::Subnet::Id
    Description: >-
      SubnetId of an existing subnet in your Virtual Private Cloud (VPC)
      dedicated for Primary Client side
  pPriServerIP:
    Default: ""
    Type: String
    Description: >-
      Private IP assigned to the Primary Server ENI (last octet has to be between 5 and
      254). Leave empty for automatic assignment.
  pPriServerSubnet:
    Type: AWS::EC2::Subnet::Id
    Description: >-
      SubnetId of an existing subnet in your Virtual Private Cloud (VPC)
      dedicated for Primary Server side.
  pSecManagementIP:
    Default: ""
    Type: String
    Description: >-
      Private IP assigned to the Secondary Management ENI (last octet has to be
      between 5 and 254). Leave empty for automatic assignment.
  pSecManagementSubnet:
    Type: AWS::EC2::Subnet::Id
    Description: >-
      SubnetId of an existing subnet in your Virtual Private Cloud (VPC)
      dedicated for Secondary Management IP
  pSecClientIP:
    Default: ""
    Type: String
    Description: >-
      Private IP assigned to the Secondary Client ENI (last octet has to be between 5 and
      254). Leave empty for automatic assignment.
  pSecClientSubnet:
    Type: AWS::EC2::Subnet::Id
    Description: >-
      SubnetId of an existing subnet in your Virtual Private Cloud (VPC)
      dedicated for Secondary Client side
  pSecServerIP:
    Default: ""
    Type: String
    Description: >-
      Private IP assigned to the Secondary Server ENI (last octet has to be between 5 and
      254). Leave empty for automatic assignment.
  pSecServerSubnet:
    Type: AWS::EC2::Subnet::Id
    Description: >-
      SubnetId of an existing subnet in your Virtual Private Cloud (VPC)
      dedicated for Secondary Server side.
  pInstanceType:
    Default: m4.xlarge
    ConstraintDescription: Must be a valid EC2 instance type.
    Type: String
    Description: Type of Citrix ADC instance
    AllowedValues:
      - m4.xlarge
      - m4.2xlarge
      - m4.4xlarge
      - m4.10xlarge
      - m3.large
      - m3.xlarge
      - m3.2xlarge
      - c4.large
      - c4.xlarge
      - c4.2xlarge
      - c4.4xlarge
      - c4.8xlarge
  pTenancyType:
    Default: default
    Type: String
    Description: Tenancy Model
    AllowedValues:
      - default
      - dedicated
  pLicensingMode:
    Description: Select the Licensing Mode
    Type: String
    AllowedValues:
      - "Pooled-Licensing"
      - "CICO-Licensing"
      - "CPU-Licensing"
  pADMIP:
    Description: Reachable ADM / ADM Agent IP
    Type: String
  pBandwidth:
    Description: >-
      Initial bandwidth of the license in Mbps to be allocated after BYOL ADCs are created. Should be multiple of 10 Mbps.
       Default is 0 Mbps
    Type: Number
    Default: 0
  pPooledEdition:
    Description: License Edition for Pooled Capacity Licensing Mode
    Type: String
    Default: ''
    AllowedValues:
      - ''
      - Standard
      - Advanced
      - Premium
  pVCPUEdition:
    Description: License Edition for vCPU Licensing Mode
    Type: String
    Default: ''
    AllowedValues:
      - ''
      - Standard
      - Advanced
      - Premium
  pPlatform:
    Description: License Platform
    Type: String
    Default: ''
    AllowedValues:
      - ''
      - VPX-10
      - VPX-25
      - VPX-200
      - VPX-1000
      - VPX-3000
      - VPX-5000
      - VPX-8000
      - VPX-10G
      - VPX-15G
      - VPX-25G
      - VPX-40G
      - VPX-100G
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Virtual Private Network Configuration
        Parameters:
          - pVpcId
          - pSSHCidrIp
          - pHTTPCidrIp
          - pHTTPSCidrIp
      - Label:
          default: Network Interface Configuration
        Parameters:
          - pPriManagementIP
          - pPriManagementSubnet
          - pPriClientIP
          - pPriClientSubnet
          - pPriServerIP
          - pPriServerSubnet
          - pSecManagementIP
          - pSecManagementSubnet
          - pSecClientIP
          - pSecClientSubnet
          - pSecServerIP
          - pSecServerSubnet

      - Label:
          default: Instance Configuration
        Parameters:
          - pKeyName
          - pTenancyType
          - pInstanceType

      - Label:
          default: Licence Server Details
        Parameters:
          - pADMIP
      - Label:
          default: License Details
        Parameters:
          - pLicensingMode

      - Label:
          default: Pooled Licensing Details (Select only when the above Licensing Mode is "Pooled-Licensing")
        Parameters:
          - pBandwidth
          - pPooledEdition

      - Label:
          default: CICO Licensing Details (Select only when the above Licensing Mode is "CICO-Licensing")
        Parameters:
          - pPlatform

      - Label:
          default: VCPU Licensing Details (Select only when the above Licensing Mode is "CPU-Licensing")
        Parameters:
          - pVCPUEdition

    ParameterLabels:
      pVpcId:
        default: VPC ID*
      pSSHCidrIp:
        default: Remote SSH CIDR IP*
      pHTTPCidrIp:
        default: Remote HTTP CIDR IP*
      pHTTPSCidrIp:
        default: Remote HTTPS CIDR IP*
      pKeyName:
        default: Key Pair*

      pPriManagementIP:
        default: Primary Management IP
      pPriManagementSubnet:
        default: Primary Management Subnet*
      pPriClientIP:
        default: Primary Client IP
      pPriClientSubnet:
        default: Primary Client Subnet*
      pPriServerIP:
        default: Primary Server IP
      pPriServerSubnet:
        default: Primary Server Subnet*
      pSecManagementIP:
        default: Secondary Management IP
      pSecManagementSubnet:
        default: Secondary Management Subnet*
      pSecClientIP:
        default: Secondary Client IP
      pSecClientSubnet:
        default: Secondary Client Subnet*
      pSecServerIP:
        default: Secondary Server IP
      pSecServerSubnet:
        default: Secondary Server Subnet*

      pADMIP:
        default: Reachable ADM / ADM Agent IP*
      pLicensingMode:
        default: Licensing Mode*
      pPlatform:
        default: Appliance Platform Type
      pBandwidth:
        default: License Bandwidth in Mbps
      pPooledEdition:
        default: License Edition
      pVCPUEdition:
        default: License Edition

      pInstanceType:
        default: Instance Type*
      pTenancyType:
        default: Tenancy Model*

Conditions:
  cPriManagementIP: !Not
    - !Equals
      - !Ref pPriManagementIP
      - ""
  cPriClientIP: !Not
    - !Equals
      - !Ref pPriClientIP
      - ""
  cPriServerIP: !Not
    - !Equals
      - !Ref pPriServerIP
      - ""

  cSecManagementIP: !Not
    - !Equals
      - !Ref pSecManagementIP
      - ""
  cSecClientIP: !Not
    - !Equals
      - !Ref pSecClientIP
      - ""
  cSecServerIP: !Not
    - !Equals
      - !Ref pSecServerIP
      - ""

Resources:
  rSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable SSH access via port 22, HTTP with port 80 and HTTPS with port 443"
      VpcId: !Ref pVpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref pSSHCidrIp
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref pHTTPCidrIp
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref pHTTPSCidrIp
  rInboundRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 0
      ToPort: 65535
      SourceSecurityGroupId: !GetAtt
        - rSecurityGroup
        - GroupId
      GroupId: !GetAtt
        - rSecurityGroup
        - GroupId

  rCitrixNodesInstanceRole:
    Type: AWS::IAM::Role
    Properties:
      Path: /
      Policies:
        - PolicyName: Citrixnode
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Action:
                  - "ec2:DescribeAddresses"
                  - "ec2:AssociateAddress"
                  - "ec2:DisassociateAddress"
                  - "ec2:DescribeInstances"
                  - "ec2:DescribeNetworkInterfaces"
                  - "ec2:DetachNetworkInterface"
                  - "ec2:AttachNetworkInterface"
                  - "ec2:StopInstances"
                  - "ec2:StartInstances"
                  - "ec2:RebootInstances"
                  - "autoscaling:*"
                  - "sns:*"
                  - "sqs:*"
                  - "iam:GetRole"
                  - "iam:SimulatePrincipalPolicy"
                Resource: "*"
                Effect: Allow
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Action:
              - "sts:AssumeRole"
            Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
  rCitrixNodesProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref rCitrixNodesInstanceRole

  rPriNsipENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref pPriManagementSubnet
      GroupSet:
        - !Ref rSecurityGroup
      Description: ENI connected to Primary Management Subnet
      PrivateIpAddress: !If
        - cPriManagementIP
        - !Ref pPriManagementIP
        - !Ref AWS::NoValue
      SecondaryPrivateIpAddressCount: 1
  rPriClientENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref pPriClientSubnet
      GroupSet:
        - !Ref rSecurityGroup
      Description: ENI connected to Primary Client Subnet
      PrivateIpAddress: !If
        - cPriClientIP
        - !Ref pPriClientIP
        - !Ref AWS::NoValue
  rPriServerENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref pPriServerSubnet
      GroupSet:
        - !Ref rSecurityGroup
      Description: ENI connected to Primary Server Subnet
      PrivateIpAddress: !If
        - cPriServerIP
        - !Ref pPriServerIP
        - !Ref AWS::NoValue
  rPriEipNsip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  rAssociateEipNsip:
    Type: AWS::EC2::EIPAssociation
    Properties:
      NetworkInterfaceId: !Ref rPriNsipENI
      AllocationId: !GetAtt
        - rPriEipNsip
        - AllocationId
  rPriEipClientIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  rAssociateEipClientIP:
    Type: AWS::EC2::EIPAssociation
    Properties:
      NetworkInterfaceId: !Ref rPriClientENI
      AllocationId: !GetAtt
        - rPriEipClientIP
        - AllocationId
  rPriVPXInstance:
    Type: AWS::EC2::Instance
    Properties:
      Tags:
        - Key: Name
          Value: NetscalerPrimary
        - Key: topic
          Value: !Join
            - ""
            - - NS_SNS_
              - !Select
                - 4
                - !Split
                  - ":"
                  - !GetAtt
                    - rCitrixNodesProfile
                    - Arn
      ImageId: !FindInMap
          - AWSRegionArch2AMI
          - !Ref AWS::Region
          - !FindInMap
            - AWSInstanceType2Arch
            - !Ref pInstanceType
            - Arch
      KeyName: !Ref pKeyName
      Tenancy: !Ref pTenancyType
      IamInstanceProfile: !Ref rCitrixNodesProfile
      InstanceType: !Ref pInstanceType
      NetworkInterfaces:
        - DeviceIndex: 0
          NetworkInterfaceId: !Ref rPriNsipENI
        - DeviceIndex: 1
          NetworkInterfaceId: !Ref rPriClientENI
        - DeviceIndex: 2
          NetworkInterfaceId: !Ref rPriServerENI
  rWaitHandle:
    Type: AWS::CloudFormation::WaitConditionHandle
    Properties: {}
  rPriWaitCondition:
    Type: AWS::CloudFormation::WaitCondition
    DependsOn: rPriVPXInstance
    Properties:
      Count: 0
      Handle: !Ref rWaitHandle
      Timeout: 200

  rSecNsipENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref pSecManagementSubnet
      GroupSet:
        - !Ref rSecurityGroup
      Description: ENI connected to Secondary Management Subnet
      PrivateIpAddress: !If
        - cSecManagementIP
        - !Ref pSecManagementIP
        - !Ref AWS::NoValue
      SecondaryPrivateIpAddressCount: 1
  rSecClientENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref pSecClientSubnet
      GroupSet:
        - !Ref rSecurityGroup
      Description: ENI connected to Secondary Client Subnet
      PrivateIpAddress: !If
        - cSecClientIP
        - !Ref pSecClientIP
        - !Ref AWS::NoValue
  rSecServerENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref pSecServerSubnet
      GroupSet:
        - !Ref rSecurityGroup
      Description: ENI connected to Secondary Server Subnet
      PrivateIpAddress: !If
        - cSecServerIP
        - !Ref pSecServerIP
        - !Ref AWS::NoValue
  rEipSecNsip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  rAssociateEipSecNsip:
    Type: AWS::EC2::EIPAssociation
    Properties:
      NetworkInterfaceId: !Ref rSecNsipENI
      AllocationId: !GetAtt
        - rEipSecNsip
        - AllocationId

  rSecVPXInstance:
    Type: AWS::EC2::Instance
    Properties:
      Tags:
        - Key: Name
          Value: NetscalerSecondary
        - Key: topic
          Value: !Join
            - ""
            - - NS_SNS_
              - !Select
                - 4
                - !Split
                  - ":"
                  - !GetAtt
                    - rCitrixNodesProfile
                    - Arn
      ImageId: !FindInMap
          - AWSRegionArch2AMI
          - !Ref AWS::Region
          - !FindInMap
            - AWSInstanceType2Arch
            - !Ref pInstanceType
            - Arch
      KeyName: !Ref pKeyName
      Tenancy: !Ref pTenancyType
      IamInstanceProfile: !Ref rCitrixNodesProfile
      InstanceType: !Ref pInstanceType
      NetworkInterfaces:
        - DeviceIndex: 0
          NetworkInterfaceId: !Ref rSecNsipENI
        - DeviceIndex: 1
          NetworkInterfaceId: !Ref rSecClientENI
        - DeviceIndex: 2
          NetworkInterfaceId: !Ref rSecServerENI
  rSecWaitCondition:
    Type: AWS::CloudFormation::WaitCondition
    DependsOn: rSecVPXInstance
    Properties:
      Count: 0
      Handle: !Ref rWaitHandle
      Timeout: 200

  rLambdaExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - sts:AssumeRole
      Policies:
        - PolicyName: LambdaLog2CloudWatch
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - "logs:CreateLogGroup"
                  - "logs:CreateLogStream"
                  - "logs:PutLogEvents"
                  - "logs:CreateExportTask"
                  - "logs:DescribeExportTask"
                Resource: "arn:aws:logs:*:*:*"
        - PolicyName: LambdaAllowAllEC2
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Action:
                  - "ec2:*"
                Resource: "*"
                Effect: Allow
              - Action: "iam:PassRole"
                Effect: "Allow"
                Resource: "*"

  rLambdaHAAcrossAZLicenseFunction:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket: !Join
          - ""
          - - ns-vpx-cft-fn-
            - !Ref AWS::Region
        S3Key: license-lambda-HA-3nic-Across-AZ.zip
      Handler: license-lambda-HA-3nic-Across-AZ.lambda_handler
      Runtime: python3.6
      Timeout: 900
      Role: !GetAtt
        - rLambdaExecutionRole
        - Arn
  rConfigureLambda:
    Type: Custom::LambdaHAAcrossAZLicense
    DependsOn:
      - rPriWaitCondition
      - rSecWaitCondition
    Properties:
      ServiceToken: !GetAtt
        - rLambdaHAAcrossAZLicenseFunction
        - Arn
      PriInstanceID: !Ref rPriVPXInstance
      PriPubNSIP: !Ref rPriEipNsip
      PriNSIP: !GetAtt rPriNsipENI.PrimaryPrivateIpAddress
      PriVIP: !GetAtt rPriClientENI.PrimaryPrivateIpAddress
      PriVIPSubnet: !Ref pPriClientSubnet
      SecInstanceID: !Ref rSecVPXInstance
      SecPubNSIP: !Ref rEipSecNsip
      SecNSIP: !GetAtt rSecNsipENI.PrimaryPrivateIpAddress
      SecVIP: !GetAtt rSecClientENI.PrimaryPrivateIpAddress
      ADMIP: !Ref pADMIP
      LicensingMode: !Ref pLicensingMode
      Bandwidth: !Ref pBandwidth
      PooledEdition: !Ref pPooledEdition
      Platform: !Ref pPlatform
      vCPUEdition: !Ref pVCPUEdition

Outputs:
  PrimaryVPXManagementURL:
    Description: HTTPS URL to the Management GUI of Primary VPX (uses self-signed cert)
    Value: !Join
      - ""
      - - "https://"
        - !GetAtt
          - rPriVPXInstance
          - PublicIp
  PrimaryVPXManagementURL2:
    Description: HTTP URL to the Management GUI of Primary VPX
    Value: !Join
      - ""
      - - "http://"
        - !GetAtt
          - rPriVPXInstance
          - PublicIp
  PrimaryInstanceIdNS:
    Description: Instance Id of newly created Primary VPX instance
    Value: !Ref rPriVPXInstance
  PrimaryVPXPublicIpVIP:
    Description: Elastic IP address of the Primary VPX instance associated with the VIP
    Value: !Ref rPriEipClientIP
  PrimaryVPXNSIp:
    Description: Private IP (NS IP) used for management of Primary VPX
    Value: !GetAtt
      - rPriVPXInstance
      - PrivateIp
  PrimaryVPXPublicNSIp:
    Description: Public IP (NS IP) used for management of Primary VPX
    Value: !GetAtt
      - rPriVPXInstance
      - PublicIp
  PrimaryVPXPrivateVIP:
    Description: Private IP address of the Primary VPX instance associated with the VIP
    Value: !GetAtt rPriClientENI.PrimaryPrivateIpAddress
  PrimaryVPXSNIP:
    Description: Private IP address of the Primary VPX instance associated with the SNIP
    Value: !GetAtt rPriServerENI.PrimaryPrivateIpAddress

  SecondaryVPXManagementURL:
    Description: HTTPS URL to the Management GUI of Secondary VPX (uses self-signed cert)
    Value: !Join
      - ""
      - - "https://"
        - !GetAtt
          - rSecVPXInstance
          - PublicIp
  SecondaryVPXManagementURL2:
    Description: HTTP URL to the Management GUI of Secondary VPX
    Value: !Join
      - ""
      - - "http://"
        - !GetAtt
          - rSecVPXInstance
          - PublicIp
  SecodnaryInstanceIdNS:
    Description: Instance Id of newly created Secondary VPX instance
    Value: !Ref rSecVPXInstance
  SecondaryVPXNSIp:
    Description: Private IP (NS IP) used for management of Secondary VPX
    Value: !GetAtt
      - rSecVPXInstance
      - PrivateIp
  SecondaryVPXPublicNSIp:
    Description: Public IP (NS IP) used for management of Secondary VPX
    Value: !GetAtt
      - rSecVPXInstance
      - PublicIp
  SecondaryVPXPrivateVIP:
    Description: Private IP address of the Secondary VPX instance associated with the VIP
    Value: !GetAtt rSecClientENI.PrimaryPrivateIpAddress
  SecondaryVPXSNIP:
    Description: Private IP address of the Secondary VPX instance associated with the SNIP
    Value: !GetAtt rSecServerENI.PrimaryPrivateIpAddress

  rSecurityGroup:
    Description: Security group id that the VPX belongs to
    Value: !Ref rSecurityGroup

Mappings:
  AWSRegionArch2AMI:
    us-east-1:
      "32": NOT_YET_SUPPORTED
      "64": ami-0fe34330ab860f7f6
      64Cluster: NOT_YET_SUPPORTED
      64GPU: NOT_YET_SUPPORTED
    us-east-2:
      "32": NOT_YET_SUPPORTED
      "64": ami-0cbd0a3af75c2d849
      64Cluster: NOT_YET_SUPPORTED
      64GPU: NOT_YET_SUPPORTED
    us-west-1:
      "32": NOT_YET_SUPPORTED
      "64": ami-0f7079dc26313c083
      64Cluster: NOT_YET_SUPPORTED
      64GPU: NOT_YET_SUPPORTED
    us-west-2:
      "32": NOT_YET_SUPPORTED
      "64": ami-0330b7f1cd4367eb8
      64Cluster: NOT_YET_SUPPORTED
      64GPU: NOT_YET_SUPPORTED
    us-gov-west-1:
      "32": NOT_YET_SUPPORTED
      "64": ami-7f58391e
      64Cluster: NOT_YET_SUPPORTED
      64GPU: NOT_YET_SUPPORTED
    ca-central-1:
      "32": NOT_YET_SUPPORTED
      "64": ami-06f6d5000b2edc8c1
      64Cluster: NOT_YET_SUPPORTED
      64GPU: NOT_YET_SUPPORTED
    eu-central-1:
      "32": NOT_YET_SUPPORTED
      "64": ami-0dbd87bc3f6b7ac0a
      64Cluster: NOT_YET_SUPPORTED
      64GPU: NOT_YET_SUPPORTED
    eu-west-1:
      "32": NOT_YET_SUPPORTED
      "64": ami-0198651093460fef7
      64Cluster: NOT_YET_SUPPORTED
      64GPU: NOT_YET_SUPPORTED
    eu-west-2:
      "32": NOT_YET_SUPPORTED
      "64": ami-087f98b111285ff8a
      64Cluster: NOT_YET_SUPPORTED
      64GPU: NOT_YET_SUPPORTED
    ap-southeast-1:
      "32": NOT_YET_SUPPORTED
      "64": ami-0af3ea5ad3eefdbc3
      64Cluster: NOT_YET_SUPPORTED
      64GPU: NOT_YET_SUPPORTED
    ap-southeast-2:
      "32": NOT_YET_SUPPORTED
      "64": ami-0e0ef92e0f3c299c9
      64Cluster: NOT_YET_SUPPORTED
      64GPU: NOT_YET_SUPPORTED
    ap-south-1:
      "32": NOT_YET_SUPPORTED
      "64": ami-038c43b331d7e5c56
      64Cluster: NOT_YET_SUPPORTED
      64GPU: NOT_YET_SUPPORTED
    ap-northeast-1:
      "32": NOT_YET_SUPPORTED
      "64": ami-0e2c84948e8c42db0
      64Cluster: NOT_YET_SUPPORTED
      64GPU: NOT_YET_SUPPORTED
    ap-northeast-2:
      "32": NOT_YET_SUPPORTED
      "64": ami-009afa7d85d599854
      64Cluster: NOT_YET_SUPPORTED
      64GPU: NOT_YET_SUPPORTED
    sa-east-1:
      "32": NOT_YET_SUPPORTED
      "64": ami-0ae382bdd08cbbb88
      64Cluster: NOT_YET_SUPPORTED
      64GPU: NOT_YET_SUPPORTED
  AWSInstanceType2Arch:
    m4.large:
      Arch: "64"
    m4.2xlarge:
      Arch: "64"
    m4.xlarge:
      Arch: "64"
    m4.4xlarge:
      Arch: "64"
    m4.10xlarge:
      Arch: "64"
    c4.large:
      Arch: "64"
    c4.xlarge:
      Arch: "64"
    c4.2xlarge:
      Arch: "64"
    c4.4xlarge:
      Arch: "64"
    c4.8xlarge:
      Arch: "64"
